--- a/configure.in.in
+++ b/configure.in.in
@@ -79,7 +79,7 @@ if test x"$enable_debug" = x"full" -o x"$enable_debug" = x"yes"; then
   CFLAGS="$save_CFLAGS"
 
   dnl Make sure we detect possible errors
-  PLATFORM_CFLAGS="$PLATFORM_CFLAGS -Werror -Wall"
+  PLATFORM_CFLAGS="$PLATFORM_CFLAGS -Wall"
 
   dnl Paranoia for --enable-debug=full
   if test x"$enable_debug" = x"full"; then
