--- a/configure.in.in
+++ b/configure.in.in
@@ -9,9 +9,9 @@ dnl *** Version information ***
 dnl ***************************
 m4_define([mp_version_major], [0])
 m4_define([mp_version_minor], [2])
-m4_define([mp_version_micro], [6])
+m4_define([mp_version_micro], [7])
 m4_define([mp_version_build], [r@REVISION@])
-m4_define([mp_version_tag], [])
+m4_define([mp_version_tag], [svn])
 m4_define([mp_version], [mp_version_major().mp_version_minor().mp_version_micro()ifelse(mp_version_tag(), [svn], [mp_version_tag()-mp_version_build()], [mp_version_tag()])])
 
 dnl *******************************************
