--- a/configure.in.in
+++ b/configure.in.in
@@ -1,7 +1,7 @@
 dnl $Id$
 dnl
-dnl Copyright (c) 2005-2006
-dnl         Erik Harrison <erikharrison@gmail.com>
+dnl Copyright (c) 2005-2006 Erik Harrison <erikharrison@gmail.com>
+dnl Copyright (c) 2003-2006 Benedikt Meurer <benny@xfce.org>
 dnl
 
 dnl ***************************
@@ -9,9 +9,9 @@ dnl *** Version information ***
 dnl ***************************
 m4_define([mp_version_major], [0])
 m4_define([mp_version_minor], [2])
-m4_define([mp_version_micro], [10])
+m4_define([mp_version_micro], [11])
 m4_define([mp_version_build], [r@REVISION@])
-m4_define([mp_version_tag], [])
+m4_define([mp_version_tag], [svn])
 m4_define([mp_version], [mp_version_major().mp_version_minor().mp_version_micro()ifelse(mp_version_tag(), [svn], [mp_version_tag()-mp_version_build()], [mp_version_tag()])])
 
 dnl *******************************************
