--- a/configure.in.in
+++ b/configure.in.in
@@ -1,6 +1,6 @@
 dnl $Id$
 dnl
-dnl Copyright (c) 2005-2006 Erik Harrison <erikharrison@gmail.com>
+dnl Copyright (c) 2005-2006 Erik Harrison <erikharrison@gxfce.org>
 dnl Copyright (c) 2003-2006 Benedikt Meurer <benny@xfce.org>
 dnl
 
