* TODO, NEWS: Update the current status of the rewrite. 	* Mousepad.desktop.in.in: Add MimeType and improve Categories. 	* Initial import of my Mousepad rewrite.
(Old svn revision: 25037)

--- a/Mousepad.desktop.in.in
+++ b/Mousepad.desktop.in.in
@@ -9,5 +9,5 @@ Icon=Mousepad
 Terminal=false
 StartupNotify=true
 Type=Application
-Categories=Application;Office;
-
+Categories=Application;Utility;TextEditor;GTK;
+MimeType=text/plain
