* TODO: Remind myself to fix problems with UTF-8 filenames. 	* mousepad/mousepad-window.c: Fix crash when opening files 	  with the command line. 	* Mousepad.desktop.in.in, Mousepad.desktop.in.in: Mousepad executable 	  is now lowercase again. 	* mousepad/mousepad-screen.c: Remove unused signals from the Class.
(Old svn revision: 25040)

--- a/Mousepad.desktop.in.in
+++ b/Mousepad.desktop.in.in
@@ -4,8 +4,8 @@ Encoding=UTF-8
 _Name=Mousepad
 _Comment=Simple Text Editor
 _GenericName=Text Editor
-Exec=Mousepad %F
-Icon=Mousepad
+Exec=mousepad %F
+Icon=mousepad
 Terminal=false
 StartupNotify=true
 Type=Application
