* mousepad/mousepad-dialogs.{c,h}: New file for the dialogs 	  so the mousepad-window file becomes more readable. 	* mousepad/mousepad-window.c: Split some function and reorder 	  them a bit. 	* mousepad/mousepad-window.c: The items in the go menu now have 	  the filename as statusbar tooltip. 	* mousepad/mousepad-window.c: Check if the file is externally modified 	  before writing. If it is, ask the user what to do. 	* mousepad/main.c, mousepad/mousepad-dbus.{c,h}, 	  mousepad/mousepad-dbus-infos.xml: Support for terminating a running 	  mousepad instance (that is connected to dbus), using mousepad -q. 	* mousepad/*: Add function destriptions for Erik (and others) :-).
(Old svn revision: 25069)

--- a/configure.in.in
+++ b/configure.in.in
@@ -87,6 +87,7 @@ dnl ***********************************
 dnl *** Check for required packages ***
 dnl ***********************************
 XDT_CHECK_PACKAGE([EXO], [exo-0.3], [0.3.2])
+XDT_CHECK_PACKAGE([PCRE], [libpcre], [6.0])
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.12.0])
 XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.12.0])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.10.0])
