--- a/mousepad/Makefile.am
+++ b/mousepad/Makefile.am
@@ -19,6 +19,8 @@ mousepad_SOURCES =							\
 	main.c								\
 	mousepad-application.c						\
 	mousepad-application.h						\
+	mousepad-dialogs.c                                              \
+	mousepad-dialogs.h                                              \
 	mousepad-file.c							\
 	mousepad-file.h							\
 	mousepad-preferences.c						\
@@ -36,6 +38,7 @@ mousepad_SOURCES =							\
 
 mousepad_CFLAGS =							\
 	$(EXO_CFLAGS)							\
+	$(PCRE_CFLAGS)							\
 	$(GTHREAD_CFLAGS)						\
 	$(PLATFORM_CFLAGS)
 
@@ -46,6 +49,7 @@ mousepad_LDFLAGS =							\
 
 mousepad_LDADD =							\
 	$(EXO_LIBS)							\
+	$(PCRE_LIBS)							\
 	$(GTHREAD_LIBS)
 
 if HAVE_DBUS
