* configure.in.in: Mousepad does not depend on exo anymore. Only 	  when you run in maintainer-mode, exo-csource is required. 	* mousepad/mousepad-document.*: Renamed mousepad-screen to mousepad-document. 	* mousepad/mousepad-{search-bar,document,window).*: Added function for 	  searching, including the type-ahead search bar. 	* mousepad/mousepad-statusbar.*: A custom statusbar suitable for displaying 	  the tooltips, overwrite/insert and the line- and column-number. 	* mousepad/mousepad-exo.*: The exo-bindings so we don't depend on exo anymore, 	  although I want to get rid of all of them. 	* mousepad/mousepad-marshal.list: Custom marshal for sending search signals. 	* mousepad/mousepad-types.h: Search types (a mousepad-enum-types.{c,h} is 	  generated during build). 	* Various performance inprovements and code cleanups.
(Old svn revision: 25379)

--- a/configure.in.in
+++ b/configure.in.in
@@ -7,6 +7,7 @@ dnl
 dnl ***************************
 dnl *** Version information ***
 dnl ***************************
+m4_define([mousepad_version_api], [1])
 m4_define([mousepad_version_major], [0])
 m4_define([mousepad_version_minor], [3])
 m4_define([mousepad_version_micro], [0])
@@ -59,9 +60,11 @@ AC_PROG_LIBTOOL()
 dnl **************************************
 dnl *** Substitute version information ***
 dnl **************************************
+MOUSEPAD_VERSION_API=mousepad_version_api()
 MOUSEPAD_VERSION_MAJOR=mousepad_version_major()
 MOUSEPAD_VERSION_MINOR=mousepad_version_minor()
 MOUSEPAD_VERSION_MICRO=mousepad_version_micro()
+AC_SUBST([MOUSEPAD_VERSION_API])
 AC_SUBST([MOUSEPAD_VERSION_MAJOR])
 AC_SUBST([MOUSEPAD_VERSION_MINOR])
 AC_SUBST([MOUSEPAD_VERSION_MICRO])
@@ -86,16 +89,11 @@ XDT_I18N([@LINGUAS@])
 dnl ***********************************
 dnl *** Check for required packages ***
 dnl ***********************************
-XDT_CHECK_PACKAGE([EXO], [exo-0.3], [0.3.2])
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.12.0])
+XDT_CHECK_PACKAGE([GMODULE], [gmodule-2.0], [2.12.0])
 XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.12.0])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.10.0])
 XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.4.0])
-
-dnl ********************************************
-dnl *** Check for session management support ***
-dnl ********************************************
-XDT_CHECK_LIBSM()
 
 dnl **********************************
 dnl *** Optional support for D-BUS ***
