* po/: Update the POTFILES.in file and regenerate the pot file. 	* mousepad/mousepad-document.c: Make the scroll offset smaller, so the 	  textview doesn't jump around while searching. 	* mousepad/mousepad-search-bar.c: Make sure the search signal is send 	  when the search field is empty after a backspace, so no text is selected in 	  the buffer. 	* Remove some leftover tabs. 	* mousepad/mousepad-{search-bar,document,window).*: Added function for 	* Various performance improvements and code cleanups.
(Old svn revision: 25382)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,20 @@
+#
+# Sources
+#
 mousepad/main.c
 mousepad/mousepad-application.c
 mousepad/mousepad-dbus.c
+mousepad/mousepad-dialogs.c
+mousepad/mousepad-document.c
+mousepad/mousepad-exo.c
+mousepad/mousepad-file.c
 mousepad/mousepad-preferences.c
-mousepad/mousepad-textview.c
+mousepad/mousepad-search-bar.c
+mousepad/mousepad-statusbar.c
+mousepad/mousepad-view.c
 mousepad/mousepad-window.c
+
+#
+# Desktop Files
+#
+Mousepad.desktop.in.in
