* mousepad/mousepad-document.c: Remove unused properties. 	* mousepad/mousepad-{exo,window,preoperties,search-bar}: Remove the 	  exo bindings, mousepad only depends on Gtk and libxfce4util. 	* mousepad/mousepad-csource.pl: Perl script to generate the menu code. 	  This script also strips the code between the xml blocks, so a minimal 	  amount of text is added to the binary (ie. it produces better code then 	  exo-csource).
(Old svn revision: 25385)

--- a/configure.in.in
+++ b/configure.in.in
@@ -51,6 +51,7 @@ AC_PROG_CC()
 AC_PROG_LD()
 AC_PROG_INSTALL()
 AC_PROG_INTLTOOL()
+AC_CHECK_PROGS([PERL], [perl5 perl])
 
 dnl **************************
 dnl *** Initialize libtool ***
