--- a/mousepad/Makefile.am
+++ b/mousepad/Makefile.am
@@ -35,8 +35,6 @@ mousepad_SOURCES =								\
 	mousepad-dialogs.h							\
 	mousepad-document.c							\
 	mousepad-document.h							\
-	mousepad-exo.c								\
-	mousepad-exo.h								\
 	mousepad-file.c								\
 	mousepad-file.h								\
 	mousepad-preferences.c							\
@@ -108,7 +106,7 @@ mousepad-dbus-infos.h: $(srcdir)/mousepad-dbus-infos.xml Makefile
 endif
 
 mousepad-window-ui.h: Makefile $(srcdir)/mousepad-window-ui.xml
-	exo-csource --static --name=mousepad_window_ui $(srcdir)/mousepad-window-ui.xml > mousepad-window-ui.h
+	$(PERL) $(srcdir)/mousepad-csource.pl mousepad_window_ui < $(srcdir)/mousepad-window-ui.xml > mousepad-window-ui.h
 
 mousepad-enum-types.h: stamp-mousepad-enum-types.h
 	@true
@@ -152,6 +150,7 @@ mousepad-marshal.c: mousepad-marshal.list Makefile
 endif
 
 EXTRA_DIST =									\
+	mousepad-csource.pl							\
 	mousepad-dbus-infos.xml							\
 	mousepad-marshal.list							\
 	mousepad-window-ui.xml
