* mousepad/mousepad-document.c: Because we don't use invisible characters in 	  the text buffer, I was able to write a custom iter search function that can 	  search in both directions, can be case insensitive, no string duplications 	  and above all: is over 10x faster then the gtk version. This gives a nice 	  performance boost to the highlight function. 	* mousepad/mousepad-search-bar.c: Connected the last signals and added a 	  wrap around option to the search bar.
(Old svn revision: 25402)

--- a/configure.in.in
+++ b/configure.in.in
@@ -73,7 +73,7 @@ AC_SUBST([MOUSEPAD_VERSION_MICRO])
 dnl **********************************
 dnl *** Check for standard headers ***
 dnl **********************************
-AC_CHECK_HEADERS([errno.h fcntl.h memory.h stdlib.h string.h \
+AC_CHECK_HEADERS([ctype.h errno.h fcntl.h memory.h stdlib.h string.h \
                   sys/mman.h sys/types.h sys/stat.h time.h unistd.h])
 
 dnl ************************************
