--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -6,13 +6,18 @@ mousepad/mousepad-application.c
 mousepad/mousepad-dbus.c
 mousepad/mousepad-dialogs.c
 mousepad/mousepad-document.c
-mousepad/mousepad-exo.c
+mousepad/mousepad-encoding-dialog.c
 mousepad/mousepad-file.c
 mousepad/mousepad-preferences.c
+mousepad/mousepad-replace-dialog.c
 mousepad/mousepad-search-bar.c
 mousepad/mousepad-statusbar.c
+mousepad/mousepad-undo.c
+mousepad/mousepad-util.c
 mousepad/mousepad-view.c
 mousepad/mousepad-window.c
+
+
 
 #
 # Desktop Files
