* docs/: Import basic manual files. 	* configure.in.in, mousepad/Makefile.am: Don't search for startup- 	  notification and gtk-unix-print. We don't use this in the code.
(Old svn revision: 26172)

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,8 @@
 SUBDIRS =									\
 	icons									\
 	mousepad                                                        	\
-	po
+	po                                                                      \
+	docs
 
 distclean-local:
 	rm -rf *.spec *.cache *~
@@ -35,6 +36,6 @@ DISTCLEANFILES =								\
 	$(desktop_DATA)
 
 DISTCHECK_CONFIGURE_FLAGS =							\
-	--enable-gtk-doc
+	--enable-xsltproc
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
