--- a/configure.in.in
+++ b/configure.in.in
@@ -92,24 +92,17 @@ dnl **********************************
 XDT_CHECK_OPTIONAL_PACKAGE([DBUS], [dbus-glib-1],
                            [0.34], [dbus], [D-BUS support])
 
-dnl *************************************************
-dnl *** Optional support for startup notification ***
-dnl *************************************************
-XDT_CHECK_OPTIONAL_PACKAGE([LIBSTARTUP_NOTIFICATION],
-                           [libstartup-notification-1.0],
-                           [0.4], [startup-notification],
-                           [startup notification library])
-
-dnl *******************************************************
-dnl *** Optional support for unix print support in GTK+ ***
-dnl *******************************************************
-XDT_CHECK_OPTIONAL_PACKAGE([GTK_UNIX_PRINT], [gtk+-unix-print-2.0],
-                           [2.10.0], [gtk_unix_print], [GTK+ Unix print support])
-
-dnl *************************
-dnl *** Check for gtk-doc ***
-dnl *************************
-GTK_DOC_CHECK([1.0])
+dnl **************************
+dnl *** Check for xsltproc ***
+dnl **************************
+AC_ARG_ENABLE([xsltproc], [AC_HELP_STRING([--enable-xsltproc], [Use xsltproc to build documentation @<:@default=no@:>@])],, [enable_xsltproc=no])
+if test x"$enable_xsltproc" = x"yes"; then
+  AC_PATH_PROG([XSLTPROC], [xsltproc], [no])
+  if test x"$XSLTPROC" = x"no"; then
+    enable_xsltproc=no
+  fi
+fi
+AM_CONDITIONAL([ENABLE_XSLTPROC], [test x"$enable_xsltproc" = x"yes"])
 
 dnl ***********************************
 dnl *** Check for debugging support ***
@@ -206,6 +199,11 @@ AC_SUBST([PLATFORM_LDFLAGS])
 
 AC_OUTPUT([
 Makefile
+docs/Makefile
+docs/manual/Makefile
+docs/manual/C/Makefile
+docs/manual/C/Mousepad.xml
+docs/manual/C/images/Makefile
 icons/Makefile
 icons/16x16/Makefile
 icons/24x24/Makefile
@@ -225,14 +223,5 @@ echo "* D-BUS support:             yes"
 else
 echo "* D-BUS support:             no"
 fi
-if test x"$LIBSTARTUP_NOTIFICATION_FOUND" = x"yes"; then
-echo "* Startup Notification:      yes"
-else
-echo "* Startup Notification:      no"
-fi
-if test x"$GTK_UNIX_PRINT_FOUND" = x"yes"; then
-echo "* GTK+ Unix Print Support:   yes"
-else
-echo "* GTK+ Unix Print Support:   no"
-fi
+echo "* Debug Support:             $enable_debug"
 echo
