* configure.in.in, po/POTFILES.in: Fix dist-check. Thank to Brian   for the hint. * mousepad/mousepad-{dialogs,window}.c: Implement tab size menu. You   can set the default tab sizes in the rc file (MiscDefaultTabSizes). * mousepad/mousepad-window{-ui.xml,.c}: Reorder menus a bit. Go menu   is now called 'Navigation' and the 'go to line' item is added to this   menu. The document menu contains the tab size menu from now on. * Rename some functions and vars to more suitable names.
(Old svn revision: 26178)

--- a/configure.in.in
+++ b/configure.in.in
@@ -21,7 +21,7 @@ dnl *** Initialize autoconf ***
 dnl ***************************
 AC_COPYRIGHT([Copyright (c) 2007
         The Xfce development team. All rights reserved.])
-AC_INIT([Mousepad], [mousepad_version()], [http://bugzilla.xfce.org/], [mousepad])
+AC_INIT([Mousepad], [mousepad_version], [http://bugzilla.xfce.org/], [mousepad])
 AC_PREREQ([2.50])
 AC_CANONICAL_TARGET()
 AC_REVISION([$Id$])
