--- a/Makefile.am
+++ b/Makefile.am
@@ -13,6 +13,16 @@ rpm: dist
 	rpmbuild -ta $(PACKAGE)-$(VERSION).tar.gz
 	@rm -f $(PACKAGE)-$(VERSION).tar.gz
 
+libexec_SCRIPTS =								\
+	MousepadHelp
+
+MousepadHelp: MousepadHelp.in Makefile
+	rm -f MousepadHelp.gen MousepadHelp
+	sed -e "s,\@datadir\@,$(datadir),g" 					\
+		< $(srcdir)/MousepadHelp.in					\
+		> MousepadHelp.gen
+	mv MousepadHelp.gen MousepadHelp
+
 desktopdir = $(datadir)/applications
 desktop_in_in_files = 								\
 	Mousepad.desktop.in.in
@@ -23,12 +33,16 @@ desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
 EXTRA_DIST =									\
+	MousepadHelp.in								\
+	Mousepad.spec.in							\
 	intltool-extract.in							\
 	intltool-merge.in							\
 	intltool-update.in							\
 	$(desktop_in_in_files)
 
 DISTCLEANFILES =								\
+	MousepadHelp								\
+	Mousepad.spec								\
 	intltool-extract							\
 	intltool-merge								\
 	intltool-update								\
